# capa

./: .gitignore  Domain.hs  Main.hs  Persist.hs  README.md  Router.hs  Serialize.hs  Service.hs  TODO  Try.cabal  Types.hs  Utils.hs  View.hs  WebServer.hs  capa.cabal  capa.hs  db.changelog.sql  fetch-js-libs.sh  schemaChangeLog.xml
Persist/: Allocation.hs  Base.hs  Cooperative.hs  Disbursal.hs  FinancialResults.hs  Member.hs  MemberAction.hs  MemberEquityAccount.hs  Persist.hs  WorkPatronage.hs
Service/: Admin.hs  Allocation.hs  Base.hs  Cooperative.hs  FinancialResults.hs  Member.hs  MemberEquityAccount.hs  Security.hs  Service.hs  Settings.hs  Time.hs  WorkPatronage.hs
Type/: ActionEvent.hs  Allocation.hs  Base.hs  Disbursal.hs  WorkPatronage.hs
control/: addAction.tpl  admin.tpl  allocationsDisbursals.tpl  coopSettings.tpl  coopSummary.tpl  enter.tpl  export.tpl  financialResults.tpl  memberAccounts.tpl  newMember.tpl  outerTemplate.tpl  partialRegistration.tpl  patronage.tpl  periodPatronage.tpl  recordPatronage.tpl  recordResult.tpl  registerAuthenticate.tpl  registerCoop.tpl  setDefaultDisbursalSchedule.tpl  showCoopSettings.tpl
doc/: CAPADATASTRUCTURES.doc.odt  entity-relationships.txt
etc/: dev.txt
