name:		capa
version: 	0.1.0.0
build-type:	Simple
cabal-version:  >= 1.2

executable capa 
  build-depends:	base, happstack-lite, blaze-html, text, 
                        containers, mtl, acid-state, safecopy, aeson, heist, either,
                        blaze-builder, bytestring, time, transformers, 
                        vector, attoparsec, happstack-server, http-conduit, 
                        HDBC, HDBC-postgresql, old-locale, ConfigFile, MissingH,
                        hslogger, zip-archive
  hs-source-dirs:	.
  main-is:		capa.hs
